website/versioned_docs/version-2.14.x/reference/subsystems/jvm.mdx
---
title: jvm
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options for general JVM functionality.

JDK strings will be passed directly to Coursier&#x27;s `--jvm` parameter. Run `cs java --available` to see a list of available JVM versions on your platform.

If the string &#x27;system&#x27; is passed, Coursier&#x27;s `--system-jvm` option will be used instead, but note that this can lead to inconsistent behavior since the JVM version will be whatever happens to be found first on the system&#x27;s PATH.

Backend: <span className="color--primary">`pants.backend.experimental.java`</span>

Config section: <span className="color--primary">`[jvm]`</span>

<span className={styles.options}>

## Basic options

### `resolves`

<Option
  cli_repr={`--jvm-resolves="{'key1': val1, 'key2': val2, ...}"`}
  env_repr="PANTS_JVM_RESOLVES"
  default_repr={`{"jvm-default": "3rdparty/jvm/default.lock"}`}
>

A dictionary mapping resolve names to the path of their lockfile.

</Option>

### `default_resolve`

<Option
  cli_repr={`--jvm-default-resolve=<str>`}
  env_repr='PANTS_JVM_DEFAULT_RESOLVE'
  default_repr={`jvm-default`}
>

The default value used for the `resolve` and `compatible_resolves` fields.

The name must be defined as a resolve in `[jvm].resolves`.

</Option>

### `debug_args`

<Option
  cli_repr={`--jvm-debug-args="['<str>', '<str>', ...]"`}
  env_repr='PANTS_JVM_DEBUG_ARGS'
  default_repr={`[]`}
>

Extra JVM arguments to use when running tests in debug mode.

For example, if you want to attach a remote debugger, use something like [&#x27;-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5005&#x27;]

</Option>

## Advanced options

### `tool_jdk`

<Option
  cli_repr={`--jvm-tool-jdk=<str>`}
  env_repr="PANTS_JVM_TOOL_JDK"
  default_repr={`temurin:1.11`}
>

The JDK to use when building and running Pants&#x27; internal JVM support code
and other non-compiler tools. See `jvm` help for supported values.

</Option>

### `jdk`

<Option
  cli_repr={`--jvm-jdk=<str>`}
  env_repr='PANTS_JVM_JDK'
  default_repr={`temurin:1.11`}
>

The JDK to use.

This string will be passed directly to Coursier&#x27;s `--jvm` parameter. Run `cs java --available` to see a list of available JVM versions on your platform.

If the string &#x27;system&#x27; is passed, Coursier&#x27;s `--system-jvm` option will be used instead, but note that this can lead to inconsistent behavior since the JVM version will be whatever happens to be found first on the system&#x27;s PATH.

</Option>

### `global_options`

<Option
  cli_repr={`--jvm-global-options="['<str>', '<str>', ...]"`}
  env_repr='PANTS_JVM_GLOBAL_OPTIONS'
  default_repr={`[]`}
>

List of JVM options to pass to all JVM processes.

Options set here will be used by any JVM processes required by Pants, with the exception of heap memory settings like `-Xmx`, which need to be set using `[GLOBAL].process_total_child_memory_usage` and `[GLOBAL].process_per_child_memory_usage`.

</Option>

### `reproducible_jars`

<Option
  cli_repr={`--[no-]jvm-reproducible-jars`}
  env_repr='PANTS_JVM_REPRODUCIBLE_JARS'
  default_repr={`False`}
>

When enabled, JAR files produced by JVM tools will have timestamps stripped.

Because some compilers do not support this step as a native operation, it can have a performance cost, and is not enabled by default.

</Option>

### `nailgun_remote_cache_speculation_delay`

<Option
  cli_repr={`--jvm-nailgun-remote-cache-speculation-delay=<int>`}
  env_repr='PANTS_JVM_NAILGUN_REMOTE_CACHE_SPECULATION_DELAY'
  default_repr={`1000`}
>

The time in milliseconds to delay speculation of nailgun processes while reading from the remote cache.

When speculating, a remote cache hit will cancel the local copy of a process. But because nailgun does not natively support cancellation, that requires killing a nailgun server, which will mean that future processes take longer to warm up.

This setting allows for trading off waiting for potentially slow cache entries against potentially having to warm up a new nailgun server.

</Option>

## Deprecated options

None

</span>
